--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="assets/images/desgin.png" alt="design icon" width="50" />
+                <img src="assets/images/icons8-website-design-100.png" alt="design icon" width="60" />
               </div>
 
               <div class="service-content-box">
@@ -174,7 +174,7 @@
             </li>
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40" />
+                <img src="./assets/images/icons8-database-100.png" alt="Web development icon" width="55" />
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Database Applications</h4>
@@ -185,7 +185,7 @@
             </li>
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg" alt="Graphic Design icon" width="40" />
+                <img src="./assets/images/icons8-dashboard-100.png" alt="Graphic Design icon" width="65" />
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Dashboard Applications</h4>
@@ -197,7 +197,7 @@
             </li>
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40" />
+                <img src="./assets/images/icons8-analysis-100.png" alt="camera icon" width="55" />
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Quantitative Research Design</h4>
