--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Samuel hanrick" width="80" />
+          <img src="./assets/images/Projects/IMG_0644.JPG" alt="Joel-img" width="80" />
         </figure>
         <div class="info-content">
           <h1 class="name" title="Samuel hanrick">Joel Duah</h1>
@@ -115,9 +115,9 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
-          <li class="navbar-item">
+           <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
-          </li>
+          </li>  -->
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
@@ -840,15 +840,15 @@
               <figure class="project-img">
                 <div class="project-item-icon-box">
                   <!-- Eye button for preview -->
-                  <button class="preview-btn" data-preview="./assets/images/project-1.jpg" title="Preview Image">
+                  <button class="preview-btn" data-preview="./assets/images/Projects/Screenshot 2025-02-05 150424.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
                   <!-- Download button -->
-                  <a href="./assets/images/project-1.jpg" download title="Download Image">
+                  <a href="https://air-quality.shinyapps.io/updated_asic/" title="Preview">
                     <i class="loot bi bi-download"></i>
                   </a>
                 </div>
-                <img src="./assets/images/project-1.jpg" alt="Finance project thumbnail" loading="lazy" />
+                <img src="./assets/images/Projects/Screenshot 2025-02-05 150424.png" alt="Finance project thumbnail" loading="lazy" />
               </figure>
               <h3 class="project-title">Finance</h3>
               <p class="project-category">Web development</p>
@@ -859,15 +859,15 @@
               <figure class="project-img">
                 <div class="project-item-icon-box">
                   <!-- Eye button for preview -->
-                  <button class="preview-btn" data-preview="./assets/images/project-2.png" title="Preview Image">
+                  <button class="preview-btn" data-preview="./assets/images/Projects/Screenshot 2025-02-05 102234.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
                   <!-- Download button -->
-                  <a href="./assets/images/project-2.png" download title="Download Image">
+                  <a href="https://air-quality.shinyapps.io/Sytrix/" title="Preview">
                     <i class="loot bi bi-download"></i>
                   </a>
                 </div>
-                <img src="./assets/images/project-2.png" alt="Orizon project thumbnail" loading="lazy" />
+                <img src="./assets/images/Projects/Screenshot 2025-02-05 102234.png" alt="Orizon project thumbnail" loading="lazy" />
               </figure>
               <h3 class="project-title">Orizon</h3>
               <p class="project-category">Web development</p>
@@ -878,29 +878,29 @@
               <figure class="project-img">
                 <div class="project-item-icon-box">
                   <!-- Eye button for preview -->
-                  <button class="preview-btn" data-preview="./assets/images/project-3.jpg" title="Preview Image">
+                  <button class="preview-btn" data-preview="./assets/images/Projects/Screenshot 2025-02-05 150624.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
                   <!-- Download button -->
-                  <a href="./assets/images/project-3.jpg" download title="Download Image">
+                  <a href="https://air-quality.shinyapps.io/Gocems/" download title="Download Image">
                     <i class="loot bi bi-download"></i>
                   </a>
                 </div>
-                <img src="./assets/images/project-3.jpg" alt="Fundo project thumbnail" loading="lazy" />
+                <img src="./assets/images/Projects/Screenshot 2025-02-05 150624.png" alt="Fundo project thumbnail" loading="lazy" />
               </figure>
               <h3 class="project-title">Fundo</h3>
               <p class="project-category">Web design</p>
             </li>
 
-            <!-- 4 -->
+            <!-- 4 --
             <li class="project-item active" data-filter-item data-category="applications">
               <figure class="project-img">
                 <div class="project-item-icon-box">
-                  <!-- Eye button for preview -->
+                  <!-- Eye button for preview --
                   <button class="preview-btn" data-preview="./assets/images/project-4.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
-                  <!-- Download button -->
+                  <!-- Download button --
                   <a href="./assets/images/project-4.png" download title="Download Image">
                     <i class="loot bi bi-download"></i>
                   </a>
@@ -911,15 +911,15 @@
               <p class="project-category">Applications</p>
             </li>
 
-            <!-- 5 -->
+            <!-- 5 --
             <li class="project-item active" data-filter-item data-category="web design">
               <figure class="project-img">
                 <div class="project-item-icon-box">
-                  <!-- Eye button for preview -->
+                  <!-- Eye button for preview --
                   <button class="preview-btn" data-preview="./assets/images/project-5.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
-                  <!-- Download button -->
+                  <!-- Download button --
                   <a href="./assets/images/project-5.png" download title="Download Image">
                     <i class="loot bi bi-download"></i>
                   </a>
@@ -930,15 +930,15 @@
               <p class="project-category">Web design</p>
             </li>
 
-            <!-- 6 -->
+            <!-- 6 --
             <li class="project-item active" data-filter-item data-category="web design">
               <figure class="project-img">
                 <div class="project-item-icon-box">
-                  <!-- Eye button for preview -->
+                  <!-- Eye button for preview --
                   <button class="preview-btn" data-preview="./assets/images/project-6.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
-                  <!-- Download button -->
+                  <!-- Download button --
                   <a href="./assets/images/project-6.png" download title="Download Image">
                     <i class="loot bi bi-download"></i>
                   </a>
@@ -949,15 +949,15 @@
               <p class="project-category">Web design</p>
             </li>
 
-            <!-- 7 -->
+            <!-- 7 --
             <li class="project-item active" data-filter-item data-category="web development">
               <figure class="project-img">
                 <div class="project-item-icon-box">
-                  <!-- Eye button for preview -->
+                  <!-- Eye button for preview --
                   <button class="preview-btn" data-preview="./assets/images/project-7.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
-                  <!-- Download button -->
+                  <!-- Download button --
                   <a href="./assets/images/project-7.png" download title="Download Image">
                     <i class="loot bi bi-download"></i>
                   </a>
@@ -968,15 +968,15 @@
               <p class="project-category">Web development</p>
             </li>
 
-            <!-- 8 -->
+            <!-- 8 --
             <li class="project-item active" data-filter-item data-category="applications">
               <figure class="project-img">
                 <div class="project-item-icon-box">
-                  <!-- Eye button for preview -->
+                  <!-- Eye button for preview --
                   <button class="preview-btn" data-preview="./assets/images/project-8.jpg" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
-                  <!-- Download button -->
+                  <!-- Download button --
                   <a href="./assets/images/project-8.jpg" download title="Download Image">
                     <i class="loot bi bi-download"></i>
                   </a>
@@ -987,15 +987,15 @@
               <p class="project-category">Applications</p>
             </li>
 
-            <!-- 9 -->
+            <!-- 9 --
             <li class="project-item active" data-filter-item data-category="web development">
               <figure class="project-img">
                 <div class="project-item-icon-box">
-                  <!-- Eye button for preview -->
+                  <!-- Eye button for preview --
                   <button class="preview-btn" data-preview="./assets/images/project-9.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
-                  <!-- Download button -->
+                  <!-- Download button --
                   <a href="./assets/images/project-9.png" download title="Download Image">
                     <i class="loot bi bi-download"></i>
                   </a>
@@ -1007,7 +1007,7 @@
             </li>
 
           </ul>
-
+<!--  -->
 
 
 
@@ -1018,7 +1018,7 @@
 
         </section>
       </article>
-
+ -->
 
 
 
@@ -1168,8 +1168,9 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src=" https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31770.167605730698!2d-0.4574011003809519!3d5.5267601613445265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdfbaedda8d54f7%3A0xd48e16c6c340829a!2sKasoa!5e0!3m2!1sen!2sgh!4v1736936310999!5m2!1sen!2sgh"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.4577637407237!2d-0.20027062432225703!3d5.646713632729412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9c77c3dab629%3A0x7590267d14f2add8!2s35%20Lower%20Hill%20Dr%2C%20Accra!5e0!3m2!1sen!2sgh!4v1738768242499!5m2!1sen!2sgh"
               width="400" height="300" loading="lazy"></iframe>
+
           </figure>
         </section>
         <section class="contact-form">
