feat(assets): add company logos and update client section
- Replace placeholder logos with actual company logos (Echt, GOCEMS, NACASKY, UPS)
- Fix incorrect title attribute in name field

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
           <img src="./assets/images/Projects/IMG_0644.JPG" alt="Joel-img" width="80" />
         </figure>
         <div class="info-content">
-          <h1 class="name" title="Samuel hanrick">Joel Duah</h1>
+          <h1 class="name" title="Joel Duah">Joel Duah</h1>
           <p class="title">Data Analyst | Shiny Developer</p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
@@ -333,22 +333,22 @@
           <ul class="clients-list has-scrollbar">
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo" />
+                <img src="./assets/images/comp/Echt logo.png" alt="client logo" />
               </a>
             </li>
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo" />
+                <img src="./assets/images/comp/GOCEMS LOGO.png" alt="client logo" />
               </a>
             </li>
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo" />
+                <img src="./assets/images/comp/NACASKY LOGO TRANS.png" alt="client logo" />
               </a>
             </li>
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo" />
+                <img src="./assets/images/comp/UPS LOGO.png" alt="client logo" />
               </a>
             </li>
             <li class="clients-item">
