--- a/public/index.html
+++ b/public/index.html
@@ -536,7 +536,7 @@
               <!-- <a href="assets/Cv/Joe Job CV.pdf" download rel="noopener noreferrer">
                 <img src="assets/images/Downloadable-PDF-Button.webp" alt="Download Joe Job's CV in PDF format" class="download-button" loading="lazy" />
               </a> -->
-              <a href="assets/Cv/Joe Job CV.pdf" download rel="noopener noreferrer">
+              <a href="assets/Cv/AirGradient CV.pdf" download rel="noopener noreferrer">
                 <img src="assets/images/Downloadable-PDF-Button-PNG-HD-Image.png" alt="Download PDF format" loading="lazy" style="width: 150px; height: auto" />
               </a>
             </li>
