fix: update project thumbnail image path in index.html
The previous image filename was incorrect and causing display issues. Replaced with the correct image file 'new.png'.

--- a/public/index.html
+++ b/public/index.html
@@ -867,7 +867,7 @@
                     <i class="loot bi bi-download"></i>
                   </a>
                 </div>
-                <img src="./assets/images/Projects/Screenshot 2025-02-05 102234.png" alt="Orizon project thumbnail" loading="lazy" />
+                <img src="./assets/images/Projects/new.png" alt="Orizon project thumbnail" loading="lazy" />
               </figure>
               <h3 class="project-title">Orizon</h3>
               <p class="project-category">Web development</p>
