Refactor code structure for improved readability and maintainability

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
             </a>
           </li>
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="social-link"> 
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
@@ -850,8 +850,8 @@
                 </div>
                 <img src="./assets/images/Projects/Screenshot 2025-02-05 150424.png" alt="Finance project thumbnail" loading="lazy" />
               </figure>
-              <h3 class="project-title">Finance</h3>
-              <p class="project-category">Web development</p>
+              <h3 class="project-title">KlinAir</h3>
+              <p class="project-category">An open-source air quality analytics app built using R/Shiny for simple and advanced air quality visualizations. Upload your dataset in any format, glean environmental insights from your data, and download reports seamlessly without any cost.</p>
             </li>
 
             <!-- 2 -->
@@ -859,7 +859,7 @@
               <figure class="project-img">
                 <div class="project-item-icon-box">
                   <!-- Eye button for preview -->
-                  <button class="preview-btn" data-preview="./assets/images/Projects/Screenshot 2025-02-05 102234.png" title="Preview Image">
+                  <button class="preview-btn" data-preview="./assets/images/Projects/new.png" title="Preview Image">
                     <ion-icon name="eye-outline"></ion-icon>
                   </button>
                   <!-- Download button -->
@@ -869,8 +869,8 @@
                 </div>
                 <img src="./assets/images/Projects/new.png" alt="Orizon project thumbnail" loading="lazy" />
               </figure>
-              <h3 class="project-title">Orizon</h3>
-              <p class="project-category">Web development</p>
+              <h3 class="project-title">CEMS</h3>
+              <p class="project-category">CEMS is a comprehensive web-based dashboard designed to visualize and analyze air quality monitoring data from industrial emission sources. This application addresses the critical need for real-time monitoring and analysis of environmental data while providing role-based access control for different stakeholders.</p>
             </li>
 
             <!-- 3 -->
@@ -888,8 +888,25 @@
                 </div>
                 <img src="./assets/images/Projects/Screenshot 2025-02-05 150624.png" alt="Fundo project thumbnail" loading="lazy" />
               </figure>
-              <h3 class="project-title">Fundo</h3>
-              <p class="project-category">Web design</p>
+              <h3 class="project-title">SpacioVue</h3>
+              <p class="project-category">SpacioVue* is an advanced air quality application designed for analyzing sensor-based and satellite-derived meteorological data. It provides intuitive tools for visualizing and interpreting pollution levels, weather patterns, and spatiotemporal trends, enabling users to monitor environmental conditions, assess exposure risks, and support data-driven decision-making for cleaner air.</p>
+            </li>
+            <li class="project-item active" data-filter-item data-category="web design">
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <!-- Eye button for preview -->
+                  <button class="preview-btn" data-preview="./assets/images/Projects/forth.png" title="Preview Image">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </button>
+                  <!-- Download button -->
+                  <a href="https://air-quality.shinyapps.io/Gocems/" download title="Download Image">
+                    <i class="loot bi bi-download"></i>
+                  </a>
+                </div>
+                <img src="./assets/images/Projects/forth.png" alt="Fundo project thumbnail" loading="lazy" />
+              </figure>
+              <h3 class="project-title">GOCEMS</h3>
+              <p class="project-category">GoCEMS is an online Continuous Emissions Monitoring System designed to track and report industrial air pollutant emissions in real time. The platform enables regulatory bodies and industries to ensure compliance with environmental standards through continuous data acquisition, visualization, and reporting.</p>
             </li>
 
             <!-- 4 --
